Fix certificate viewer not showing up for subresources if the devtools window is docked.

BUG=657270

Review-Url: https://chromiumcodereview.appspot.com/2427323005
Cr-Commit-Position: refs/heads/master@{#426917}

Former-commit-id: 2697c72ef37e963d6cb465780683901833f59a6a